...
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/spin_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_button_background"
            android:text="SPIN AGAIN"
            android:textColor="#FFFFFF"
            android:paddingRight="10dp"
...
